# music-connector

./: Cargo.toml  Dockerfile  README.md  Rocket.toml  fly.toml
.sqlx/: query-1e531aad32b51abf590f907e6645d0fd8f13d5f23e72ea21d35d9f93f1131630.json  query-2d44bc8eeaa456989a7c36430cbdebbfd933b35dcbea092f026a02a963657eff.json  query-508a9107ef9abf4e01f7a7c9e711a83ac3d3defb4d49db54fbc07478c3396e0c.json  query-658ea6dcd8608a29fd8760363562ec5ccd34b5f7de37dc172dc6e1b33956b654.json  query-6cf7e71e9474e1a851aa7c45b502b43cc0d53020d3d0275f34e9d9f70bb3d632.json  query-71f906ad08e3151a71cb2c2b8766e96993251b498d71801d1db818839093b072.json  query-7cc01d15420092762465235b3649970946a8e70f2faffeae027e11e288f27218.json  query-828cc469cb55d6ff5b3eaf731a663d65179cbab19af0d1a1bb51fc532b6a6f4c.json  query-b459e9ab1c694998101e65c6fca64247f7c53fb60008cb8586dc86384115b141.json
db/: init.sql
src/: main.rs
src/api/: auth_api.rs  db.rs  external_api.rs  internal_api.rs  mod.rs  types.rs
static/: connector.html  design-laws-html-css.md  design-system.css  index.html  login.html  music_taste.html  script.js  signup.html
