[package]
name = "hottest_100"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json", "secrets"] }
reqwest = { version = "0.12.12", features = ["json"] }
urlencoding = "2.1.3"
serde = "1.0.217"
serde_json = "1.0.137"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
postgres = "0.19.9"
sqlx-postgres = "0.8.6"
dotenv = "0.15.0"
anyhow = "1.0.95"
base64 = "0.22.1"
